# screensavers.rsxs

./: .gitignore  .travis.yml  CMakeLists.txt  FindOpenGLES.cmake  FindOpenGl.cmake  FindX.cmake  Jenkinsfile  README.md  azure-pipelines.yml
.github/workflows/: build.yml  increment-version.yml  sync-addon-metadata-translations.yml
bootstrap/: autoreconf.txt
debian/: changelog  changelog.in  control  copyright  kodi-screensaver-rsxs-biof.install.in  kodi-screensaver-rsxs-busyspheres.install.in  kodi-screensaver-rsxs-colorfire.install.in  kodi-screensaver-rsxs-cyclone.install  kodi-screensaver-rsxs-cyclone.install.in  kodi-screensaver-rsxs-drempels.install.in  kodi-screensaver-rsxs-euphoria.install  kodi-screensaver-rsxs-euphoria.install.in  kodi-screensaver-rsxs-feedback.install.in  kodi-screensaver-rsxs-fieldlines.install  kodi-screensaver-rsxs-fieldlines.install.in  kodi-screensaver-rsxs-flocks.install  kodi-screensaver-rsxs-flocks.install.in  kodi-screensaver-rsxs-flux.install  kodi-screensaver-rsxs-flux.install.in  kodi-screensaver-rsxs-helios.install  kodi-screensaver-rsxs-helios.install.in  kodi-screensaver-rsxs-hufosmoke.install.in  kodi-screensaver-rsxs-hufotunnel.install.in  kodi-screensaver-rsxs-hyperspace.install  kodi-screensaver-rsxs-hyperspace.install.in  kodi-screensaver-rsxs-lattice.install  kodi-screensaver-rsxs-lattice.install.in  kodi-screensaver-rsxs-lorenz.install.in  kodi-screensaver-rsxs-matrixview.install.in  kodi-screensaver-rsxs-microcosm.install.in  kodi-screensaver-rsxs-plasma.install  kodi-screensaver-rsxs-plasma.install.in  kodi-screensaver-rsxs-skyrocket.install  kodi-screensaver-rsxs-skyrocket.install.in  kodi-screensaver-rsxs-solarwinds.install  kodi-screensaver-rsxs-solarwinds.install.in  kodi-screensaver-rsxs-spirographx.install.in  kodi-screensaver-rsxs-sundancer2.install.in  rules  xbmc-screensaver-rsxs-euphoria.install  (+2 more)
depends/common/imagemagick/: CMakeLists.txt  deps.txt  imagemagick.sha256  imagemagick.txt
depends/common/libtool/: CMakeLists.txt  libtool.sha256  libtool.txt
lib/ImageMagick/: CMakeLists.txt
lib/Implicit/: CMakeLists.txt  impCapsule.cpp  impCapsule.h  impCrawlPoint.h  impCubeTables.cpp  impCubeTables.h  impCubeVolume.cpp  impCubeVolume.h  impEllipsoid.cpp  impEllipsoid.h  impHexahedron.cpp  impHexahedron.h  impKnot.cpp  impKnot.h  impRoundedHexahedron.cpp  impRoundedHexahedron.h  impShape.cpp  impShape.h  impSphere.cpp  impSphere.h  impSurface.cpp  impSurface.h  impTorus.cpp  impTorus.h
lib/Rgbhsl/: CMakeLists.txt  Rgbhsl.cpp  Rgbhsl.h
lib/gli/: readme.md
lib/glm/: CMakeLists.txt
lib/kodi/gui/gl/: CMakeLists.txt  ErrorCheck.cpp  ErrorCheck.h  Texture.cpp  Texture.h
lib/rsMath/: CMakeLists.txt  rsMath.h  rsMatrix.cpp  rsMatrix.h  rsQuat.cpp  rsQuat.h  rsTrigonometry.h  rsVec.cpp  rsVec.h  rsVec4.cpp  rsVec4.h
lib/rsxs-0.9/: Makefile.in  aclocal.m4  config.h.in  configure
screensaver.rsxs.biof/: addon.xml.in
screensaver.rsxs.biof/resources/: settings.xml
screensaver.rsxs.busyspheres/: addon.xml.in
screensaver.rsxs.busyspheres/resources/: settings.xml
screensaver.rsxs.colorfire/: addon.xml.in
screensaver.rsxs.colorfire/resources/: settings.xml
screensaver.rsxs.cyclone/: addon.xml  addon.xml.in
screensaver.rsxs.cyclone/resources/: settings.xml
screensaver.rsxs.drempels/: addon.xml.in
screensaver.rsxs.drempels/resources/: settings.xml
screensaver.rsxs.euphoria/: addon.xml  addon.xml.in
screensaver.rsxs.euphoria/resources/: settings.xml
screensaver.rsxs.feedback/: addon.xml.in
screensaver.rsxs.feedback/resources/: settings.xml
screensaver.rsxs.fieldlines/: addon.xml  addon.xml.in
screensaver.rsxs.fieldlines/resources/: settings.xml
screensaver.rsxs.flocks/: addon.xml  addon.xml.in
screensaver.rsxs.flocks/resources/: settings.xml
screensaver.rsxs.flux/: addon.xml  addon.xml.in
screensaver.rsxs.flux/resources/: settings.xml
screensaver.rsxs.helios/: addon.xml  addon.xml.in
screensaver.rsxs.helios/resources/: settings.xml
screensaver.rsxs.hufosmoke/: addon.xml.in
screensaver.rsxs.hufosmoke/resources/: settings.xml
screensaver.rsxs.hufotunnel/: addon.xml.in
screensaver.rsxs.hufotunnel/resources/: settings.xml
screensaver.rsxs.hyperspace/: addon.xml  addon.xml.in
screensaver.rsxs.hyperspace/resources/: settings.xml
screensaver.rsxs.lattice/: addon.xml  addon.xml.in
screensaver.rsxs.lattice/resources/: brass.dds  chrome.dds  circuits.dds  crystal.dds  doughnuts.dds  ghostly.dds  industrial1.dds  industrial2.dds  settings.xml  shiny.dds
screensaver.rsxs.lorenz/: addon.xml.in
screensaver.rsxs.lorenz/resources/: settings.xml
screensaver.rsxs.matrixview/: addon.xml.in
screensaver.rsxs.matrixview/resources/: settings.xml
screensaver.rsxs.microcosm/: addon.xml.in
screensaver.rsxs.microcosm/resources/: settings.xml
screensaver.rsxs.plasma/: addon.xml  addon.xml.in
screensaver.rsxs.plasma/resources/: settings.xml
screensaver.rsxs.skyrocket/: addon.xml  addon.xml.in
screensaver.rsxs.skyrocket/resources/: settings.xml
screensaver.rsxs.solarwinds/: addon.xml  addon.xml.in
screensaver.rsxs.solarwinds/resources/: settings.xml
screensaver.rsxs.spirographx/: addon.xml.in
screensaver.rsxs.spirographx/resources/: settings.xml
screensaver.rsxs.sundancer2/: addon.xml.in
screensaver.rsxs.sundancer2/resources/: settings.xml
screensavers.rsxs/: addon.xml.in
src/: addoncommon.h  cyclone.cpp  euphoria.cpp  fieldlines.cpp  flocks.cpp  flux.cpp  helios.cpp  hyperspace.cpp  lattice.cpp  plasma.cpp  skyrocket.cpp  solarwinds.cpp
src/biof/: CMakeLists.txt  main.cpp  main.h
src/busyspheres/: CMakeLists.txt  main.cpp  main.h
src/colorfire/: CMakeLists.txt  colorfire_textures.cpp  colorfire_textures.h  main.cpp  main.h
src/cyclone/: CMakeLists.txt  main.cpp  main.h
src/drempels/: CMakeLists.txt  TexMgr.cpp  TexMgr.h  gpoly.cpp  gpoly.h  main.cpp  main.h  noise1234.c  noise1234.h
src/euphoria/: CMakeLists.txt  main.cpp  (+2 more)
src/hufotunnel/: CMakeLists.txt  hufo_tunnel_textures.cpp  hufo_tunnel_textures.h  main.cpp  main.h  marblemap.h  swirlmap.h
(+1886 files in other folders)
